--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 
   body {
-  background-image: url('https://lh3.googleusercontent.com/proxy/94o8_80aGKaiHj6_HMAr4pCN2mxKmbzsft2HUfXV0lwYJuYYgG3kXcN_zAsdD4kTlzVViecV7cKGTgFziKJY21YmpgnM9h-IzMD_qCP-QamulQ_Dqgt2zxUMehwBUsPN9ghH8c1g7fV1gu71j9XyeRedZPUt9x1vdnaNbcSdfUF1S--oPzwJGHmlSe4p5Dw');
+  background-image: url('cuisine.jpg');
     background-repeat: no-repeat;
       background-attachment: fixed;
   background-size: 100% 100%;
@@ -174,7 +174,7 @@ p {
 <body>
 <h1>Welcome to our Page!</h1>
 <h2>Our Menu</h2>
-<h4><span id="heading">Choose from a wide range of cuisine below!</span></h4>
+<h4><span id="heading">Choose from a wide range of cuisines below!</span></h4>
 
 <div class="row">
 
@@ -252,8 +252,12 @@ p {
 
   <div class="col-lg-4 col-md-6 col-sm-9"><p id="rd">
     <span id="rd2">THAI</span>
-  <br><br><span class="cont">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magnaq ali.</span></p></div>
+  <br><br><span class="cont"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p></div>
 
   <div class="col-lg-4 col-md-6 col-sm-9"><p id="rd">
     <span id="rd2">GREEK</span>
